objects/Service__c.object
<CustomObject>
    <label>Service</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Booking_Slot__c</fullName>
        <label>Booking Slot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9AM - 10AM</fullName>
                </value>
                <value>
                    <fullName>10AM - 11AM</fullName>
                </value>
                <value>
                    <fullName>11AM - 12PM</fullName>
                </value>
                <value>
                    <fullName>1PM - 2PM</fullName>
                </value>
                <value>
                    <fullName>2PM - 3PM</fullName>
                </value>
                <value>
                    <fullName>3PM - 4PM</fullName>
                </value>
                <value>
                    <fullName>4PM - 5PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivered_Date_Time__c</fullName>
        <label>Delivered Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date_Time__c</fullName>
        <label>Expected Delivery Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>